adding Google Authentication

--- a/config.env
+++ b/config.env
@@ -5,3 +5,9 @@ BROWSER_COOKIES_EXPIRES_IN=10
 
 FORGET_PASSWORD_EXPIRES_AT=10M
 REFRESH_TOKEN=90d
+
+CLIENT_ID = "858571916851-e110oimm0rebon5dvbs6dubi9lgnhdm7.apps.googleusercontent.com"
+CLIENT_SECRET = "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"
+
+CLIENT_URL = "http://localhost:5173/"
+REDIRECT_URI = 'http://localhost:80/callback'
